@@ -1,3 +1,8 @@
+2007-01-08  Sven Schuetz
+
+	* providerRegister.c, providerRegister.h, providerMgr.c, default.reg: 
+	Fixed 1379327: lifecycle indication provider registration faulty
+
 2007-01-12  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-119.boeblingen.de.ibm.com>
 
 	* cimXmlGen.c, cimXmlOps.y, cimXmlParser.c, cimXmlParser.h, 
